[gd_scene load_steps=51 format=2]

[ext_resource path="res://ui/textures/default_inventory_background.png" type="Texture" id=1]
[ext_resource path="res://ui/textures/item_slot_default_background.png" type="Texture" id=2]
[ext_resource path="res://ui/scenes/slot.gd" type="Script" id=3]
[ext_resource path="res://ui/scenes/crafting.gd" type="Script" id=4]
[ext_resource path="res://ui/textures/crafting.png" type="Texture" id=5]
[ext_resource path="res://efx/animated_textures/crafting_icon_animated.tres" type="Texture" id=6]
[ext_resource path="res://ui/textures/buttons/btn_max.png" type="Texture" id=7]
[ext_resource path="res://fonts/m5x7.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://efx/shader/outline_object.tres" type="Material" id=9]
[ext_resource path="res://efx/resources/spotlight_7.png" type="Texture" id=10]
[ext_resource path="res://efx/wiggle_scale.gd" type="Script" id=11]
[ext_resource path="res://ui/textures/loading/loading_bar.png" type="Texture" id=12]
[ext_resource path="res://efx/rotate_continuous.gd" type="Script" id=13]
[ext_resource path="res://efx/resources/effect_4.png" type="Texture" id=14]
[ext_resource path="res://ui/textures/loading/loading_fill.png" type="Texture" id=15]
[ext_resource path="res://ui/textures/input_amount.png" type="Texture" id=16]
[ext_resource path="res://ui/textures/buttons/btn_min.png" type="Texture" id=17]
[ext_resource path="res://ui/textures/item_slot_guide.jpg" type="Texture" id=18]
[ext_resource path="res://ui/textures/buttons/btn_yes.png" type="Texture" id=19]
[ext_resource path="res://ui/textures/icons/cancel_icon.png" type="Texture" id=20]
[ext_resource path="res://ui/textures/icons/plus_icon.png" type="Texture" id=21]
[ext_resource path="res://ui/textures/icons/minus_icon.png" type="Texture" id=22]
[ext_resource path="res://ui/textures/buttons/btn_no.png" type="Texture" id=23]
[ext_resource path="res://ui/textures/buttons/button_1.png" type="Texture" id=25]

[sub_resource type="CanvasItemMaterial" id=7]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=9]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=6]
blend_mode = 1

[sub_resource type="StyleBoxTexture" id=28]
texture = ExtResource( 18 )
region_rect = Rect2( 0, 0, 18, 18 )

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.937255, 0, 1 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "fade"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.984314, 0, 0 ), Color( 1, 0.937255, 0, 1 ), Color( 0.968627, 1, 0, 0 ) ]
}

[sub_resource type="Animation" id=30]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.937255, 0, 1 ) ]
}

[sub_resource type="Animation" id=31]
resource_name = "fade"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.984314, 0, 0 ), Color( 1, 0.937255, 0, 1 ), Color( 0.968627, 1, 0, 0 ) ]
}

[sub_resource type="Animation" id=32]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.937255, 0, 1 ) ]
}

[sub_resource type="Animation" id=33]
resource_name = "fade"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.984314, 0, 0 ), Color( 1, 0.937255, 0, 1 ), Color( 0.968627, 1, 0, 0 ) ]
}

[sub_resource type="Animation" id=34]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.937255, 0, 1 ) ]
}

[sub_resource type="Animation" id=35]
resource_name = "fade"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.984314, 0, 0 ), Color( 1, 0.937255, 0, 1 ), Color( 0.968627, 1, 0, 0 ) ]
}

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 18, 18 )

[sub_resource type="StyleBoxTexture" id=29]
texture = ExtResource( 18 )
region_rect = Rect2( 0, 0, 18, 18 )

[sub_resource type="Animation" id=36]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.937255, 0, 1 ) ]
}

[sub_resource type="Animation" id=37]
resource_name = "fade"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.984314, 0, 0 ), Color( 1, 0.937255, 0, 1 ), Color( 0.968627, 1, 0, 0 ) ]
}

[sub_resource type="Animation" id=38]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.937255, 0, 1 ) ]
}

[sub_resource type="Animation" id=39]
resource_name = "fade"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.984314, 0, 0 ), Color( 1, 0.937255, 0, 1 ), Color( 0.968627, 1, 0, 0 ) ]
}

[sub_resource type="Animation" id=40]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.937255, 0, 1 ) ]
}

[sub_resource type="Animation" id=41]
resource_name = "fade"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.984314, 0, 0 ), Color( 1, 0.937255, 0, 1 ), Color( 0.968627, 1, 0, 0 ) ]
}

[sub_resource type="Animation" id=42]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.937255, 0, 1 ) ]
}

[sub_resource type="Animation" id=43]
resource_name = "fade"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.984314, 0, 0 ), Color( 1, 0.937255, 0, 1 ), Color( 0.968627, 1, 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=10]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=11]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=44]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[node name="Crafting" type="Node2D"]
script = ExtResource( 4 )

[node name="Shadow" type="TextureRect" parent="."]
modulate = Color( 0.243137, 0.243137, 0.243137, 0.352941 )
margin_left = -63.0
margin_top = -59.0
margin_right = 113.0
margin_bottom = 53.0
rect_scale = Vector2( 0.72, 1.02 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="TextureRect" parent="."]
modulate = Color( 0.309804, 0.243137, 0.372549, 1 )
margin_left = -61.0
margin_top = -58.0
margin_right = 115.0
margin_bottom = 54.0
rect_scale = Vector2( 0.7, 1 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CraftingIcon" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.392157 )
margin_left = -27.0
margin_top = -31.0
margin_right = 37.0
margin_bottom = 33.0
rect_scale = Vector2( 0.85, 1 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light" type="Control" parent="."]
margin_left = -14.0
margin_top = -8.0
margin_right = 13.0
margin_bottom = 19.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Flare" type="Sprite" parent="Light"]
modulate = Color( 0, 0.505882, 1, 1 )
material = SubResource( 7 )
position = Vector2( 14, 14 )
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 14 )
script = ExtResource( 13 )

[node name="Flare2" type="Sprite" parent="Light"]
modulate = Color( 0, 0.647059, 1, 1 )
material = SubResource( 9 )
position = Vector2( 15, 14 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 10 )
script = ExtResource( 11 )
power = 0.25
speed = 2.0

[node name="Light2" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Flare" type="Sprite" parent="Light2"]
modulate = Color( 1, 0, 0.960784, 1 )
material = SubResource( 6 )
position = Vector2( -39.9999, -25.0001 )
scale = Vector2( 0.3, 0.25 )
texture = ExtResource( 10 )

[node name="Flare3" type="Sprite" parent="Light2"]
modulate = Color( 1, 0, 0.960784, 1 )
material = SubResource( 6 )
position = Vector2( -11, -25.0001 )
scale = Vector2( 0.3, 0.25 )
texture = ExtResource( 10 )

[node name="Flare5" type="Sprite" parent="Light2"]
modulate = Color( 1, 0, 0.960784, 1 )
material = SubResource( 6 )
position = Vector2( 13, -25.0001 )
scale = Vector2( 0.3, 0.25 )
texture = ExtResource( 10 )

[node name="Flare7" type="Sprite" parent="Light2"]
modulate = Color( 1, 0, 0.960784, 1 )
material = SubResource( 6 )
position = Vector2( 42, -25.0001 )
scale = Vector2( 0.3, 0.25 )
texture = ExtResource( 10 )

[node name="Flare2" type="Sprite" parent="Light2"]
modulate = Color( 1, 0, 0, 1 )
material = SubResource( 6 )
position = Vector2( -39.6, 34 )
scale = Vector2( 0.3, 0.25 )
texture = ExtResource( 10 )

[node name="Flare4" type="Sprite" parent="Light2"]
modulate = Color( 1, 0, 0, 1 )
material = SubResource( 6 )
position = Vector2( -10.6001, 34 )
scale = Vector2( 0.3, 0.25 )
texture = ExtResource( 10 )

[node name="Flare6" type="Sprite" parent="Light2"]
modulate = Color( 1, 0, 0, 1 )
material = SubResource( 6 )
position = Vector2( 13.3999, 34 )
scale = Vector2( 0.3, 0.25 )
texture = ExtResource( 10 )

[node name="Flare8" type="Sprite" parent="Light2"]
modulate = Color( 1, 0, 0, 1 )
material = SubResource( 6 )
position = Vector2( 42.3999, 34 )
scale = Vector2( 0.3, 0.25 )
texture = ExtResource( 10 )

[node name="CraftingSlotsMainGuide" type="Control" parent="."]
visible = false
margin_left = -53.0
margin_top = -34.0
margin_right = 55.0
margin_bottom = -16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot1" type="Panel" parent="CraftingSlotsMainGuide"]
modulate = Color( 1, 0.937255, 0, 1 )
material = ExtResource( 9 )
margin_left = 2.0
margin_top = -2.0
margin_right = 20.0
margin_bottom = 16.0
rect_min_size = Vector2( 18, 18 )
rect_scale = Vector2( 1.2, 1.2 )
custom_styles/panel = SubResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CraftingSlotsMainGuide/Slot1"]
anims/RESET = SubResource( 12 )
anims/fade = SubResource( 13 )

[node name="Slot2" type="Panel" parent="CraftingSlotsMainGuide"]
modulate = Color( 1, 0.937255, 0, 1 )
material = ExtResource( 9 )
margin_left = 30.0
margin_top = -2.0
margin_right = 48.0
margin_bottom = 16.0
rect_min_size = Vector2( 18, 18 )
rect_scale = Vector2( 1.2, 1.2 )
custom_styles/panel = SubResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CraftingSlotsMainGuide/Slot2"]
anims/RESET = SubResource( 30 )
anims/fade = SubResource( 31 )

[node name="Slot3" type="Panel" parent="CraftingSlotsMainGuide"]
modulate = Color( 1, 0.937255, 0, 1 )
material = ExtResource( 9 )
margin_left = 56.0
margin_top = -2.0
margin_right = 74.0
margin_bottom = 16.0
rect_min_size = Vector2( 18, 18 )
rect_scale = Vector2( 1.2, 1.2 )
custom_styles/panel = SubResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CraftingSlotsMainGuide/Slot3"]
anims/RESET = SubResource( 32 )
anims/fade = SubResource( 33 )

[node name="Slot4" type="Panel" parent="CraftingSlotsMainGuide"]
modulate = Color( 1, 0.937255, 0, 1 )
material = ExtResource( 9 )
margin_left = 84.0
margin_top = -2.0
margin_right = 102.0
margin_bottom = 16.0
rect_min_size = Vector2( 18, 18 )
rect_scale = Vector2( 1.2, 1.2 )
custom_styles/panel = SubResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CraftingSlotsMainGuide/Slot4"]
anims/RESET = SubResource( 34 )
anims/fade = SubResource( 35 )

[node name="CraftingSlotsMain" type="Control" parent="."]
margin_left = -53.0
margin_top = -34.0
margin_right = 55.0
margin_bottom = -16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot1" type="Panel" parent="CraftingSlotsMain"]
material = ExtResource( 9 )
margin_left = 4.0
margin_right = 22.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot2" type="Panel" parent="CraftingSlotsMain"]
material = ExtResource( 9 )
margin_left = 32.0
margin_right = 50.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot3" type="Panel" parent="CraftingSlotsMain"]
material = ExtResource( 9 )
margin_left = 58.0
margin_right = 76.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot4" type="Panel" parent="CraftingSlotsMain"]
material = ExtResource( 9 )
margin_left = 86.0
margin_right = 104.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CraftingSlotsSubGuide" type="Control" parent="."]
visible = false
margin_left = -53.0
margin_top = 26.0
margin_right = 55.0
margin_bottom = 44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot1" type="Panel" parent="CraftingSlotsSubGuide"]
modulate = Color( 1, 0.937255, 0, 1 )
margin_left = 2.0
margin_top = -2.0
margin_right = 20.0
margin_bottom = 16.0
rect_min_size = Vector2( 18, 18 )
rect_scale = Vector2( 1.2, 1.2 )
custom_styles/panel = SubResource( 29 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CraftingSlotsSubGuide/Slot1"]
anims/RESET = SubResource( 36 )
anims/fade = SubResource( 37 )

[node name="Slot2" type="Panel" parent="CraftingSlotsSubGuide"]
modulate = Color( 1, 0.937255, 0, 1 )
margin_left = 30.0
margin_top = -2.0
margin_right = 48.0
margin_bottom = 16.0
rect_min_size = Vector2( 18, 18 )
rect_scale = Vector2( 1.2, 1.2 )
custom_styles/panel = SubResource( 29 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CraftingSlotsSubGuide/Slot2"]
anims/RESET = SubResource( 38 )
anims/fade = SubResource( 39 )

[node name="Slot3" type="Panel" parent="CraftingSlotsSubGuide"]
modulate = Color( 1, 0.937255, 0, 1 )
margin_left = 56.0
margin_top = -2.0
margin_right = 74.0
margin_bottom = 16.0
rect_min_size = Vector2( 18, 18 )
rect_scale = Vector2( 1.2, 1.2 )
custom_styles/panel = SubResource( 29 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CraftingSlotsSubGuide/Slot3"]
anims/RESET = SubResource( 40 )
anims/fade = SubResource( 41 )

[node name="Slot4" type="Panel" parent="CraftingSlotsSubGuide"]
modulate = Color( 1, 0.937255, 0, 1 )
margin_left = 84.0
margin_top = -2.0
margin_right = 102.0
margin_bottom = 16.0
rect_min_size = Vector2( 18, 18 )
rect_scale = Vector2( 1.2, 1.2 )
custom_styles/panel = SubResource( 29 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CraftingSlotsSubGuide/Slot4"]
anims/RESET = SubResource( 42 )
anims/fade = SubResource( 43 )

[node name="CraftingSlotsSub" type="Control" parent="."]
margin_left = -53.0
margin_top = 26.0
margin_right = 55.0
margin_bottom = 44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot1" type="Panel" parent="CraftingSlotsSub"]
margin_left = 4.0
margin_right = 22.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot2" type="Panel" parent="CraftingSlotsSub"]
margin_left = 32.0
margin_right = 50.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot3" type="Panel" parent="CraftingSlotsSub"]
margin_left = 58.0
margin_right = 76.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot4" type="Panel" parent="CraftingSlotsSub"]
margin_left = 86.0
margin_right = 104.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="CraftingSlotRelease" type="Control" parent="."]
margin_left = -14.0
margin_top = -8.0
margin_right = 13.0
margin_bottom = 19.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlotFinal" type="Panel" parent="CraftingSlotRelease"]
margin_right = 18.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
rect_scale = Vector2( 1.5, 1.5 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputAmount" type="TextureRect" parent="."]
visible = false
self_modulate = Color( 0.223529, 0.223529, 0.223529, 0.698039 )
margin_left = -33.0
margin_top = -103.0
margin_right = 45.0
margin_bottom = -81.0
rect_scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="InputAmount"]
margin_left = 21.0
margin_top = -9.41177
margin_right = 58.0
margin_bottom = 3.58823
custom_fonts/font = SubResource( 10 )
text = "Amount"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmountLabel" type="Label" parent="InputAmount"]
margin_left = 32.9412
margin_top = 5.0
margin_right = 44.9412
margin_bottom = 18.0
custom_fonts/font = SubResource( 10 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonMin" type="TextureButton" parent="InputAmount"]
margin_left = -52.9412
margin_top = 1.17647
margin_right = -18.9412
margin_bottom = 21.1765
texture_normal = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="InputAmount/ButtonMin"]

[node name="Label" type="Label" parent="InputAmount/ButtonMin"]
margin_left = 9.41179
margin_top = 3.52941
margin_right = 29.4118
margin_bottom = 16.5294
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = SubResource( 11 )
text = "Min"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonMax" type="TextureButton" parent="InputAmount"]
margin_left = 96.4706
margin_top = 1.17647
margin_right = 135.471
margin_bottom = 21.1765
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="InputAmount/ButtonMax"]

[node name="Label" type="Label" parent="InputAmount/ButtonMax"]
margin_left = 11.7647
margin_top = 3.52941
margin_right = 31.7647
margin_bottom = 16.5294
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = SubResource( 11 )
text = "Max"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonPlus" type="TextureButton" parent="InputAmount"]
margin_left = 65.8824
margin_top = -2.35294
margin_right = 92.8824
margin_bottom = 23.6471
texture_normal = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="InputAmount/ButtonPlus"]

[node name="ButtonMinus" type="TextureButton" parent="InputAmount"]
margin_left = -15.2941
margin_top = -2.353
margin_right = 12.7059
margin_bottom = 23.647
texture_normal = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="InputAmount/ButtonMinus"]

[node name="ButtonYes" type="TextureButton" parent="InputAmount"]
margin_left = 41.1765
margin_top = 25.8824
margin_right = 93.1765
margin_bottom = 51.8824
rect_scale = Vector2( 0.8, 0.8 )
texture_normal = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="InputAmount/ButtonYes"]

[node name="Label" type="Label" parent="InputAmount/ButtonYes"]
margin_left = 16.1765
margin_top = 4.41177
margin_right = 34.1765
margin_bottom = 17.4118
rect_scale = Vector2( 1.2, 1.2 )
custom_fonts/font = SubResource( 11 )
text = "Yes"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonNo" type="TextureButton" parent="InputAmount"]
margin_left = -4.70588
margin_top = 25.8824
margin_right = 47.2941
margin_bottom = 51.8824
rect_scale = Vector2( 0.8, 0.8 )
texture_normal = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="InputAmount/ButtonNo"]

[node name="Label" type="Label" parent="InputAmount/ButtonNo"]
margin_left = 19.1176
margin_top = 2.94118
margin_right = 31.1176
margin_bottom = 15.9412
rect_scale = Vector2( 1.2, 1.2 )
custom_fonts/font = SubResource( 11 )
text = "No"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingBar" type="TextureProgress" parent="."]
visible = false
margin_left = -15.0
margin_top = -16.0
margin_right = 707.0
margin_bottom = 223.0
rect_scale = Vector2( 0.04, 0.04 )
texture_under = ExtResource( 12 )
texture_progress = ExtResource( 15 )
texture_progress_offset = Vector2( 77, 80 )
tint_progress = Color( 1, 0.607843, 0, 1 )
radial_fill_degrees = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="LoadingBar"]

[node name="CraftingTitleIcon" type="TextureRect" parent="."]
margin_left = -35.0
margin_top = -56.0
margin_right = -19.0
margin_bottom = -40.0
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="."]
margin_left = -60.0
margin_top = -58.0
margin_right = 62.0
margin_bottom = -42.0
custom_fonts/font = SubResource( 3 )
text = "Crafting"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonCraft" type="TextureButton" parent="."]
margin_left = -25.0
margin_top = 58.0
margin_right = 39.0
margin_bottom = 90.0
rect_scale = Vector2( 0.8, 0.8 )
texture_normal = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ButtonCraft"]
margin_left = 17.5
margin_top = 8.75
margin_right = 47.5
margin_bottom = 21.75
custom_fonts/font = SubResource( 44 )
text = "CRAFT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="ButtonCraft"]

[node name="ButtonClose" type="TextureButton" parent="."]
margin_left = 46.0
margin_top = -56.0
margin_right = 62.0
margin_bottom = -40.0
rect_scale = Vector2( 0.85, 0.85 )
texture_normal = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
